# statistics_for_data_science

./: README.md  pyproject.toml
notebooks/: statistics_for_data_science.ipynb
